Fix minor Css issues

--- a/src/components/Flex.module.css
+++ b/src/components/Flex.module.css
@@ -86,51 +86,50 @@
 @media (min-width: 0) {
   .col-xs-1 {
     flex: 0 0 8.33%;
-    width: 8.33%;
+    max-width: 8.33%;
   }
   .col-xs-2 {
     flex: 0 0 16.66%;
-    width: 16.66%;
+    max-width: 16.66%;
   }
   .col-xs-3 {
     flex: 0 0 25%;
-    width: 25%;
+    max-width: 25%;
   }
   .col-xs-4 {
     flex: 0 0 33.33%;
-    width: 33.33%;
+    max-width: 33.33%;
   }
   .col-xs-5 {
     flex: 0 0 41.66%;
-    width: 41.66%;
+    max-width: 41.66%;
   }
   .col-xs-6 {
     flex: 0 0 50%;
-    width: 50%;
+    max-width: 50%;
   }
   .col-xs-7 {
     flex: 0 0 58.33%;
-    width: 58.33%;
+    max-width: 58.33%;
   }
   .col-xs-8 {
     flex: 0 0 66.66%;
-    width: 66.66%;
+    max-width: 66.66%;
   }
   .col-xs-9 {
     flex: 0 0 75%;
-    width: 75%;
+    max-width: 75%;
   }
   .col-xs-10 {
     flex: 0 0 83.33%;
-    width: 83.33%;
+    max-width: 83.33%;
   }
   .col-xs-11 {
     flex: 0 0 91.66%;
-    width: 91.66%;
+    max-width: 91.66%;
   }
   .col-xs-12 {
     flex: 0 0 100%;
-    width: 100%;
   }
 }
 
@@ -138,52 +137,51 @@
 @media (min-width: 600px) {
   .col-sm-1 {
     flex: 0 0 8.33%;
-    width: 8.33%;
+    max-width: 8.33%;
   }
   .col-sm-2 {
     flex: 0 0 16.66%;
-    width: 16.66%;
+    max-width: 16.66%;
   }
   .col-sm-3 {
     flex: 0 0 25%;
-    width: 25%;
+    max-width: 25%;
   }
   .col-sm-4 {
     flex: 0 0 33.33%;
-    width: 33.33%;
+    max-width: 33.33%;
   }
   .col-sm-5 {
     flex: 0 0 41.66%;
-    width: 41.66%;
+    max-width: 41.66%;
   }
   .col-sm-6 {
     flex: 0 0 50%;
-    width: 50%;
-    margin: -1.5rem;
+    max-width: 50%;
   }
   .col-sm-7 {
     flex: 0 0 58.33%;
-    width: 58.33%;
+    max-width: 58.33%;
   }
   .col-sm-8 {
     flex: 0 0 66.66%;
-    width: 66.66%;
+    max-width: 66.66%;
   }
   .col-sm-9 {
     flex: 0 0 75%;
-    width: 75%;
+    max-width: 75%;
   }
   .col-sm-10 {
     flex: 0 0 83.33%;
-    width: 83.33%;
+    max-width: 83.33%;
   }
   .col-sm-11 {
     flex: 0 0 91.66%;
-    width: 91.66%;
+    max-width: 91.66%;
   }
   .col-sm-12 {
     flex: 0 0 100%;
-    width: 100%;
+    max-width: 100%;
   }
 }
 
@@ -191,51 +189,51 @@
 @media (min-width: 960px) {
   .col-md-1 {
     flex: 0 0 8.33%;
-    width: 8.33%;
+    max-width: 8.33%;
   }
   .col-md-2 {
     flex: 0 0 16.66%;
-    width: 16.66%;
+    max-width: 16.66%;
   }
   .col-md-3 {
     flex: 0 0 25%;
-    width: 25%;
+    max-width: 25%;
   }
   .col-md-4 {
     flex: 0 0 33.33%;
-    width: 33.33%;
+    max-width: 33.33%;
   }
   .col-md-5 {
     flex: 0 0 41.66%;
-    width: 41.66%;
+    max-width: 41.66%;
   }
   .col-md-6 {
     flex: 0 0 50%;
-    width: 50%;
+    max-width: 50%;
   }
   .col-md-7 {
     flex: 0 0 58.33%;
-    width: 58.33%;
+    max-width: 58.33%;
   }
   .col-md-8 {
     flex: 0 0 66.66%;
-    width: 66.66%;
+    max-width: 66.66%;
   }
   .col-md-9 {
     flex: 0 0 75%;
-    width: 75%;
+    max-width: 75%;
   }
   .col-md-10 {
     flex: 0 0 83.33%;
-    width: 83.33%;
+    max-width: 83.33%;
   }
   .col-md-11 {
     flex: 0 0 91.66%;
-    width: 91.66%;
+    max-width: 91.66%;
   }
   .col-md-12 {
     flex: 0 0 100%;
-    width: 100%;
+    max-width: 100%;
   }
 }
 
@@ -243,50 +241,50 @@
 @media (min-width: 1280px) {
   .col-lg-1 {
     flex: 0 0 8.33%;
-    width: 8.33%;
+    max-width: 8.33%;
   }
   .col-lg-2 {
     flex: 0 0 16.66%;
-    width: 16.66%;
+    max-width: 16.66%;
   }
   .col-lg-3 {
     flex: 0 0 25%;
-    width: 25%;
+    max-width: 25%;
   }
   .col-lg-4 {
     flex: 0 0 33.33%;
-    width: 33.33%;
+    max-width: 33.33%;
   }
   .col-lg-5 {
     flex: 0 0 41.66%;
-    width: 41.66%;
+    max-width: 41.66%;
   }
   .col-lg-6 {
     flex: 0 0 50%;
-    width: 50%;
+    max-width: 50%;
   }
   .col-lg-7 {
     flex: 0 0 58.33%;
-    width: 58.33%;
+    max-width: 58.33%;
   }
   .col-lg-8 {
     flex: 0 0 66.66%;
-    width: 66.66%;
+    max-width: 66.66%;
   }
   .col-lg-9 {
     flex: 0 0 75%;
-    width: 75%;
+    max-width: 75%;
   }
   .col-lg-10 {
     flex: 0 0 83.33%;
-    width: 83.33%;
+    max-width: 83.33%;
   }
   .col-lg-11 {
     flex: 0 0 91.66%;
-    width: 91.66%;
+    max-width: 91.66%;
   }
   .col-lg-12 {
     flex: 0 0 100%;
-    width: 100%;
+    max-width: 100%;
   }
 }
