fixes css classes

--- a/src/layout/SigneeList/SigneeListComponent.module.css
+++ b/src/layout/SigneeList/SigneeListComponent.module.css
@@ -1,13 +1,13 @@
-.signeeListHeader {
+.header {
   background-color: var(--fds-semantic-surface-action-subtle);
   font-weight: 400;
   border-bottom-color: var(--fds-semantic-border-action-hover);
 }
 
-.signeeListCaption {
+.caption {
   font: var(--fds-typography-paragraph-large);
 }
 
-.signeeListTable tr td:last-child {
+.table tr td:last-child {
   width: 1%;
 }
