replaces double slash comment with /**/ comment in css

--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -25,7 +25,7 @@ input.form-control:focus:not(.a-hasButton) {
 }
 
 @media print {
-  // setting explicit base font-size for print
+  /* setting explicit base font-size for print */
   html {
     font-size: 16px;
   }
