--- a/src/layout/Option/Option.module.css
+++ b/src/layout/Option/Option.module.css
@@ -16,3 +16,14 @@
 .vertical {
   flex-direction: column;
 }
+
+.optionLabelContainer {
+  display: flex;
+  column-gap: 8px;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.optionDescription {
+  flex: 0 0 100%;
+}
