--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -27,7 +27,7 @@ input.form-control:focus:not(.a-hasButton) {
 @media print {
   /* setting explicit base font-size for print */
   html {
-    font-size: 16px;
+    font-size: 10px !important;
   }
 
   h1 {
