--- a/src/components/organisms/AltinnAppHeaderMenu.module.css
+++ b/src/components/organisms/AltinnAppHeaderMenu.module.css
@@ -1,10 +1,4 @@
-.popoverContent {
-  border-radius: 1px;
-  max-width: 100px;
-  padding: 10px;
-  top: 50px;
-}
-
-.popoverTrigger {
-  padding: 0;
+.button-active {
+  background-color: var(--fds-semantic-surface-action-first-no_fill-active);
+  color: var(--fds-semantic-text-action-first-active);
 }
