flip chevron on navigation button when opening [no ci]

--- a/src/features/navigation/PopoverNavigation.module.css
+++ b/src/features/navigation/PopoverNavigation.module.css
@@ -42,7 +42,12 @@
 
 .popover-button-icon {
   font-size: 1.2rem;
+}
+.popover-button-icon-margin {
   margin-right: 4px;
+}
+.popover-button-icon-open {
+  transform: scaleY(-1);
 }
 
 .popover-button-name {
