--- a/src/components/label/Label.module.css
+++ b/src/components/label/Label.module.css
@@ -1,9 +1,6 @@
 .fieldWrapper {
-  display: flex;
+  display: grid;
   gap: var(--fds-spacing-2);
-  flex-grow: 0;
-  max-width: 100%;
-  flex-basis: 100%;
 }
 
 .fullWidth {
