--- a/src/app-components/Date/Date.module.css
+++ b/src/app-components/Date/Date.module.css
@@ -1,3 +1,9 @@
+.dateComponent {
+  display: flex;
+  flex-grow: 0;
+  max-width: 100%;
+  flex-basis: 100%;
+}
 .icon {
   width: 24px;
   margin-right: 12px;
