--- a/src/components/table/AltinnSummaryTable.module.css
+++ b/src/components/table/AltinnSummaryTable.module.css
@@ -1,22 +1,22 @@
-.instanceMetaData {
+.table {
+  display: grid;
+  grid-template-columns: auto 1fr;
+
   margin-top: 36px;
-  box-shadow: none;
+  margin-bottom: 1.25rem;
   padding: 0;
-  height: auto;
   width: auto;
 }
 
-.tableCell {
-  border-bottom: 0;
-  padding-right: 1.5625rem;
-}
-
-.tableRow {
-  height: auto;
-}
-
 @media print {
-  .instanceMetaData {
+  .table {
     margin-bottom: 1.25rem;
   }
+}
+
+.key {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  padding-right: 1.5625rem;
 }
