--- a/src/components/table/AltinnSummaryTable.module.css
+++ b/src/components/table/AltinnSummaryTable.module.css
@@ -1,10 +1,9 @@
 .table {
-  display: grid;
-  grid-template-columns: auto 1fr;
-
-  margin-top: 36px;
+  border: 0;
+  margin: 36px 0 0;
   padding: 0;
   width: auto;
+  height: auto;
 }
 
 @media print {
