--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -4,23 +4,29 @@
 .disabled-date {
   border: none !important;
   background-color: transparent !important;
-  color: #000 !important;
+  color: var(--colors-primary-black) !important;
 }
 .disabled {
-  border: 2px solid #6a6a6a !important;
-  color: #000;
-  background: repeating-linear-gradient(135deg, #efefef, #efefef 2px, #fff 3px, #fff 5px) !important;
+  border: 2px solid var(--colors-primary-grey) !important;
+  color: var(--colors-primary-black);
+  background: repeating-linear-gradient(
+    135deg,
+    var(--colors-primary-greyLight),
+    var(--colors-primary-greyLight) 2px,
+    var(--colors-primary-white) 3px,
+    var(--colors-primary-white) 5px
+  ) !important;
 }
 input:hover:not(.disabled) {
-  border-color: #0062ba !important;
+  border-color: var(--colors-primary-blueDark) !important;
 }
 
 input.form-control:focus:not(.a-hasButton) {
-  outline: 2px solid #0062ba;
+  outline: 2px solid var(--colors-primary-blueDark);
   outline-offset: 0px;
 }
 .input-group:focus-within {
-  outline: 2px solid #0062ba;
+  outline: 2px solid var(--colors-primary-blueDark);
   outline-offset: 0px;
 }
 
