--- a/src/components/altinnParty.module.css
+++ b/src/components/altinnParty.module.css
@@ -1,7 +1,7 @@
 .partyPaper {
   margin-bottom: 0.75rem;
   border-radius: 0;
-  background-color: #e3f7ff;
+  background-color: var(--colors-primary-blueLighter);
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
   width: 100%;
 }
@@ -22,9 +22,9 @@
 .partyPaperDisabled {
   margin-bottom: 0.75rem;
   border-radius: 0;
-  background-color: #e3f7ff;
+  background-color: var(--colors-primary-blueLighter);
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
-  color: #6a6a6a;
+  color: var(--colors-primary-grey);
   width: 100%;
 }
 
@@ -43,14 +43,14 @@
 }
 
 .subUnitWrapper {
-  color: #000;
+  color: var(--colors-primary-black);
 }
 
 .subUnitListHeaderWrapper {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   gap: 0.75rem;
-  border-top: 1px solid #bcc7cc;
+  border-top: 1px solid var(--colors-primary-greyMedium);
 }
 
 .subUnitListHeaderWrapper:hover {
@@ -63,7 +63,7 @@
 }
 
 .subUnit:hover {
-  background: #cff0ff;
+  background: var(--colors-primary-blueLight);
   cursor: pointer;
 }
 
@@ -73,19 +73,19 @@
 }
 
 .subUnitListHeader:hover {
-  background: #cff0ff;
+  background: var(--colors-primary-blueLight);
   cursor: pointer;
 }
 
 .subUnitListHeaderIcon {
   font-size: 2rem;
-  color: #1eadf7;
+  color: var(--colors-primary-blue);
 }
 
 .subUnitTextWrapper {
   padding: 1.25rem 1.25rem 1.25rem 3rem;
   gap: 0.75rem;
-  border-top: 1px solid #bcc7cc;
+  border-top: 1px solid var(--colors-primary-greyMedium);
 }
 
 .subUnitTextBold {
