--- a/src/components/message/ErrorPaper.module.css
+++ b/src/components/message/ErrorPaper.module.css
@@ -1,7 +1,7 @@
 .paperWrapper {
   max-width: 330px;
   color: rgba(black, 0.87);
-  background-color: #f9cad3;
+  background-color: var(--colors-primary-redLight);
   box-shadow:
     0px 2px 1px -1px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14),
