--- a/src/components/molecules/AltinnInformationPaper.module.css
+++ b/src/components/molecules/AltinnInformationPaper.module.css
@@ -1,5 +1,5 @@
 .paper {
-  background: #fff;
+  background: var(--colors-primary-white);
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
   border-radius: 0;
   font-size: 16px;
