--- a/src/features/devtools/components/OpenDevToolsButton/OpenDevToolsButton.module.css
+++ b/src/features/devtools/components/OpenDevToolsButton/OpenDevToolsButton.module.css
@@ -65,7 +65,7 @@
 }
 
 .message::after {
-  background-color: #fff;
+  background-color: var(--colors-primary-white);
   content: '';
   display: block;
   position: absolute;
