--- a/src/layout/FileUpload/FileUploadTable/FileTableComponent.module.css
+++ b/src/layout/FileUpload/FileUploadTable/FileTableComponent.module.css
@@ -32,7 +32,7 @@
   overflow: hidden;
   font-weight: 400;
   font-size: 1rem;
-  color: #000;
+  color: var(--colors-primary-black);
 }
 .editButton {
   float: right;
