--- a/src/app-components/Label/Label.module.css
+++ b/src/app-components/Label/Label.module.css
@@ -2,6 +2,8 @@
   display: flex;
   gap: var(--fds-spacing-2);
   align-items: center;
+}
+.labelAndHelpWrapper > button {
   min-width: var(--fds-spacing-7);
 }
 
