--- a/src/components/message/ErrorPaper.module.css
+++ b/src/components/message/ErrorPaper.module.css
@@ -1,11 +1,11 @@
 .paperWrapper {
   max-width: 330px;
-  color: rgba(black, 0.87);
+  color: rgba(00, 00, 00, 0.87);
   background-color: var(--colors-primary-redLight);
   box-shadow:
-    0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    0 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
 
 .paper {
