refactor returnUrl, urlHelper, add back to main form, update tests [no ci]

--- a/src/components/presentation/LanguageSelector.module.css
+++ b/src/components/presentation/LanguageSelector.module.css
@@ -8,8 +8,7 @@
   color: var(--fds-semantic-text-action-first-active);
 }
 
-.list-button-active > button {
-  background-color: var(--fds-semantic-surface-action-first-no_fill-active);
+.list-button > button {
   color: var(--fds-semantic-text-action-first-active);
 }
 
