--- a/src/layout/SigningStatusPanel/SigningStatusPanel.module.css
+++ b/src/layout/SigningStatusPanel/SigningStatusPanel.module.css
@@ -15,7 +15,7 @@
   flex-direction: column;
 
   .contentContainer {
-    padding: var(--fds-spacing-2); /* TODO: remove when MUI Grid is removed?*/
+    padding: var(--fds-spacing-2);
     display: flex;
     flex-direction: column;
     gap: var(--fds-spacing-4);
