--- a/src/layout/SigneeList/SigneeListComponent.module.css
+++ b/src/layout/SigneeList/SigneeListComponent.module.css
@@ -13,9 +13,7 @@
 }
 
 .summaryHeader {
-  font-weight: 400;
-  border-bottom-color: var(--fds-semantic-border-action-hover);
-  margin-bottom: 0;
+  font: var(--fds-typography-paragraph-large);
 }
 
 .summaryDivider {
