update design after consulting with designers

--- a/src/app-components/Table/Table.module.css
+++ b/src/app-components/Table/Table.module.css
@@ -86,3 +86,8 @@
   clip-path: inset(50%);
   white-space: nowrap;
 }
+
+.emptyCell {
+  align-items: 'left';
+  color: var(--semantic-text-neutral-subtle);
+}
