--- a/src/features/navigation/PopoverNavigation.module.css
+++ b/src/features/navigation/PopoverNavigation.module.css
@@ -15,9 +15,9 @@
   transform: unset !important;
   will-change: unset !important;
   top: calc(100% + 8px) !important;
-  right: 0 !important;
+  left: 0 !important;
   bottom: unset !important;
-  left: unset !important;
+  right: unset !important;
 }
 
 .popover-container :global(.fds-popover__arrow) {
