--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,12 @@
   --modal-padding-y: 24px;
 
   --page-max-width: none;
-  --page-padding-x: 24px;
+  --page-padding-x: 0;
+
+  --header-padding-x: 24px;
+  --header-padding-y: 12px;
+  --nav-padding: 24px;
+  --footer-padding: 24px;
 
   --repeating-group-edit-surface-color: #f1fbff;
   --repeating-group-edit-border-color: var(--colors-blue-400);
@@ -93,20 +98,21 @@
 
 @media only screen and (min-width: 768px) {
   :root {
-    --modal-padding-x: 84px;
+    --modal-padding-x: 40px;
     --modal-padding-y: 36px;
+
+    --page-padding-x: 24px;
+
+    --header-padding-x: var(--page-padding-x);
+    --header-padding-y: 24px;
+    --nav-padding: var(--page-padding-x);
+    --footer-padding: var(--page-padding-x);
   }
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 993px) {
   :root {
-    --modal-padding-x: 96px;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  :root {
-    --page-max-width: 1056px;
+    --page-max-width: 944px;
     --page-padding-x: 0;
   }
 }
