--- a/src/components/presentation/ExpandWidthButton.module.css
+++ b/src/components/presentation/ExpandWidthButton.module.css
@@ -1,10 +1,5 @@
 .expand-width-button {
-  display: none;
-}
-@media only screen and (min-width: 993px) {
-  .expand-width-button {
-    display: flex;
-  }
+  display: var(--expand-width-button-display);
 }
 
 .expand-width-icon {
