--- a/src/components/presentation/BackNavigationButton.module.css
+++ b/src/components/presentation/BackNavigationButton.module.css
@@ -1,7 +1,21 @@
 .inbox-button {
-  color: var(--fds-colors-blue-700);
+  margin-left: -12px;
 }
 
 .inbox-button svg {
   margin-right: 4px;
+}
+
+.spinner {
+  margin-left: 0;
+  padding: 8px 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .spinner {
+    margin-left: 8px;
+  }
+  .inbox-button {
+    margin-left: 0;
+  }
 }
