--- a/src/layout/List/ListComponent.module.css
+++ b/src/layout/List/ListComponent.module.css
@@ -4,7 +4,7 @@
 
 .listTable caption {
   text-align: left;
-  padding-bottom: var(--fds-spacing-4);
+  padding-bottom: var(--ds-size-4);
 }
 
 .listTable th:first-of-type {
@@ -12,7 +12,7 @@
 }
 
 .listTable th {
-  background-color: var(--fds-colors-grey-100);
+  background-color: var(--ds-color-neutral-1);
 }
 
 .listTable tr {
@@ -31,7 +31,7 @@
 
 .selectedRow,
 .selectedRowCell {
-  background-color: var(--fds-colors-blue-100);
+  background-color: var(--ds-global-blue-1);
 }
 
 .pagination {
@@ -39,7 +39,7 @@
   display: flex;
   justify-content: right;
   align-items: center;
-  background-color: var(--fds-colors-grey-100);
+  background-color: var(--ds-color-neutral-1);
   width: 100%;
 }
 .paginationMobile {
@@ -52,17 +52,17 @@
 }
 
 .mobileRadioGroup > div :hover {
-  background-color: var(--fds-colors-grey-100);
+  background-color: var(--ds-color-neutral-1);
 }
 
 .mobileRadio {
-  border-top: 1px solid var(--fds-colors-grey-200);
-  padding: var(--fds-spacing-4);
-  gap: var(--fds-spacing-8);
+  border-top: 1px solid var(--ds-color-neutral-2);
+  padding: var(--ds-size-4);
+  gap: var(--ds-size-8);
 }
 
 .mobileRadio input:checked:hover {
-  background-color: var(--fds-radio-border-color);
+  background-color: var(--ds-color-accent-base-default);
 }
 
 .mobileRadio label {
@@ -72,11 +72,11 @@
 .mobileRadio span {
   display: flex;
   flex-direction: column;
-  gap: var(--fds-spacing-4);
+  gap: var(--ds-size-4);
 }
 
 .mobileRadio label div {
   display: flex;
   flex-direction: column;
-  gap: var(--fds-spacing-2);
+  gap: var(--ds-size-2);
 }
