--- a/src/layout/Accordion/SummaryAccordion.module.css
+++ b/src/layout/Accordion/SummaryAccordion.module.css
@@ -1,20 +1,20 @@
 .container {
   border-radius: 3px;
-  border: 1px solid var(--fds-semantic-border-neutral-subtle);
-  background-color: var(--fds-semantic-surface-neutral-subtle);
+  border: 1px solid var(--ds-color-neutral-border-subtle);
+  background-color: var(--ds-color-neutral-background-subtle);
 }
 
 .header {
-  border-bottom: 1px solid var(--fds-semantic-border-neutral-subtle);
-  background-color: var(--fds-semantic-surface-neutral-subtle);
+  border-bottom: 1px solid var(--ds-color-neutral-border-subtle);
+  background-color: var(--ds-color-neutral-background-subtle);
 }
 
 .padding {
-  padding: var(--fds-spacing-5);
+  padding: var(--ds-spacing-5);
 }
 
 .paddingSmall {
-  padding: var(--fds-spacing-3) var(--fds-spacing-5);
+  padding: var(--ds-size-3) var(--ds-spacing-5);
 }
 
 .container .header > h2,
