--- a/src/features/navigation/SidebarNavigation.module.css
+++ b/src/features/navigation/SidebarNavigation.module.css
@@ -5,7 +5,7 @@
   padding: 0 14px;
   box-sizing: border-box;
 
-  /* This is highly dependent on the width of the page, and only works for large screen sizes, see src/index.css */
+  /* This is highly dependent on the width of the page, and only works for large screen sizes, see src/components/presentation/Presentation.module.css */
   width: calc(50% - var(--page-max-width) / 2);
   max-width: var(--max-sidebar-width);
 
