--- a/src/components/AltinnAppHeader.module.css
+++ b/src/components/AltinnAppHeader.module.css
@@ -16,38 +16,34 @@
   align-items: center;
 }
 
-.header-link {
-  display: inline;
+.header-link a {
   color: var(--fds-semantic-surface-action-default);
-  font-size: 1.25rem;
-  line-height: 1.5;
-
-  @media screen and (max-width: 1024.95px) {
-    font-size: 1.125rem;
-  }
-
-  & a {
-    color: var(--fds-semantic-surface-action-default);
-    border-bottom: 0;
-  }
-
-  & a:hover {
-    border-bottom: 3px solid var(--fds-semantic-surface-action-default);
-  }
+  border-bottom: 0;
+}
+.header-link a:hover {
+  border-bottom: 3px solid var(--fds-semantic-surface-action-default);
 }
 
 .header-link-list {
+  line-height: 1;
   display: flex;
   flex-wrap: wrap;
   column-gap: 1rem;
   flex-grow: 1;
   list-style: none;
-  margin: 0;
   padding: 0;
-  margin-bottom: -6px;
+
+  /* Make the links line up with the altinn logo */
+  font-size: 1.125rem;
+  margin: 6px 0 0 0;
 }
 
 @media only screen and (min-width: 768px) {
+  .header-link-list {
+    /* Make the links line up with the altinn logo */
+    font-size: 1.25rem;
+    margin: 4px 0 0 0;
+  }
   .header-link-list,
   .app-bar {
     column-gap: 2rem;
